review reults from 18/08/2020 fixes